--- a/test/tutorial.html
+++ b/test/tutorial.html
@@ -74,7 +74,7 @@
 
                 <li class="paragraph timeline" data-title=".prev">播放上一帧：<code>Slideshow.prev()</code></li>
 
-                <li class="paragraph timeline" data-title=".jumpto">转到指定帧：<code>Slideshow.jumpto()</code></li>
+                <li class="paragraph timeline" data-title=".jumpto">转到指定帧：<code>Slideshow.jumpTo()</code></li>
 
                 <li class="paragraph timeline" data-title=".addListener">也可以注册一个事件监听：<code>Slideshow.addListener(
                     Function: fn )</code></li>
