--- a/test/tutorial.html
+++ b/test/tutorial.html
@@ -168,11 +168,13 @@
 </main>
 
 <aside id="control">
-    <div class="arrow next disable"></div>
-    <div class="arrow prev"></div>
+    <div class="arrow next"></div>
+    <div class="arrow prev disable"></div>
 </aside>
 
 <script src="../build/Slideshow.js"></script>
+<script src="../build/plugins/keyBind.js"></script>
+<script src="../build/plugins/touchHandler.js"></script>
 <script src="js/tutorial.js"></script>
 </body>
 </html>
