--- a/index.html
+++ b/index.html
@@ -174,5 +174,7 @@
 
 <script src="js/Slideshow.js"></script>
 <script src="js/tutorial.js"></script>
+<script src="js/plugins/keyBind.js"></script>
+<script src="js/plugins/touchHandler.js"></script>
 </body>
 </html>
