--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 <li class="timeline rotateInUpRight" data-title="Chrome">Chrome
                     <mark>23+</mark>
                 </li>
-                <li class="timeline rotateInDownRight" data-title="Firefox">Firefox
+                <li class="timeline rotateInUpLeft" data-title="Firefox">Firefox
                     <mark>21+</mark>
                 </li>
-                <li class="timeline rotateInUpLeft" data-title="Safari">Safari
+                <li class="timeline rotateInDownRight" data-title="Safari">Safari
                     <mark>6+</mark>
                 </li>
             </ul>
