--- a/test/tutorial.html
+++ b/test/tutorial.html
@@ -175,6 +175,7 @@
 <script src="../build/Slideshow.js"></script>
 <script src="../build/plugins/keyBind.js"></script>
 <script src="../build/plugins/touchHandler.js"></script>
+<script src="../build/plugins/hashChange.js"></script>
 <script src="js/tutorial.js"></script>
 </body>
 </html>
